--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "buffer": "^6.0.3",
     "daisyui": "^2.33.0",
     "firebase": "^9.12.1",
+    "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
